--- a/iCode.Framework.AutomizedFeeding/iCode.Framework.AutomizedFeeding.csproj
+++ b/iCode.Framework.AutomizedFeeding/iCode.Framework.AutomizedFeeding.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\iCode.Extentions.IEnumerableExtentions\iCode.Extentions.IEnumerableExtentions.csproj" />
+  </ItemGroup>
+
 </Project>
