Implement IEnumerable classification extensions + fix false spelling (Extentions / Extensions)

--- a/iCode.AutomizedFeedingTest/iCode.AutomizedFeedingTest.csproj
+++ b/iCode.AutomizedFeedingTest/iCode.AutomizedFeedingTest.csproj
@@ -19,9 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\iCode.Extensions.ObjectMadeFeedable\iCode.Extensions.ObjectMadeFeedable.csproj" />
     <ProjectReference Include="..\iCode.Framework.AutomizedFeeding\iCode.Framework.AutomizedFeeding.csproj" />
-    <ProjectReference Include="..\iCode.Extentions.ObjectMadeFeedable\iCode.Extentions.ObjectMadeFeedable.csproj" />
-    <ProjectReference Include="..\iCode.Framework\iCode.Framework.csproj" />
   </ItemGroup>
 
 </Project>
