--- a/iCode.Extensions.IEnumerableExtensionsTest/iCode.IEnumerableExtentionsTest.csproj
+++ b/iCode.Extensions.IEnumerableExtensionsTest/iCode.IEnumerableExtentionsTest.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\iCode.Extensions.IEnumerableExtensions\iCode.Extensions.IEnumerableExtensions.csproj" />
     <ProjectReference Include="..\iCode.Framework.AutomizedFeeding\iCode.Framework.AutomizedFeeding.csproj" />
-    <ProjectReference Include="..\iCode.Extentions.IEnumerableExtentions\iCode.Extentions.IEnumerableExtentions.csproj" />
   </ItemGroup>
 
 </Project>
