--- a/iCode.Extensions.ObjectMadeFeedable/iCode.Extensions.ObjectMadeFeedable.csproj
+++ b/iCode.Extensions.ObjectMadeFeedable/iCode.Extensions.ObjectMadeFeedable.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Extensions.IEnumerableExtensions\iCode.Extensions.IEnumerableExtensions.csproj" />
+    <ProjectReference Include="..\iCode.Framework.AutomizedFeeding\iCode.Framework.AutomizedFeeding.csproj" />
   </ItemGroup>
 
 </Project>
