--- a/iCode.NewObjectsParsingTest/iCode.NewObjectsParsingTest.csproj
+++ b/iCode.NewObjectsParsingTest/iCode.NewObjectsParsingTest.csproj
@@ -24,8 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\iCode.Extensions.NewObjectsParsing\iCode.Extensions.NewObjectsParsing.csproj" />
     <ProjectReference Include="..\iCode.Framework.AutomizedFeeding\iCode.Framework.AutomizedFeeding.csproj" />
-    <ProjectReference Include="..\iCode.Extentions.NewObjectsParsing\iCode.Extentions.NewObjectsParsing.csproj" />
   </ItemGroup>
 
 </Project>
