--- a/iCode.ElementaryBlocksTest/iCode.ElementaryBlocksTest.csproj
+++ b/iCode.ElementaryBlocksTest/iCode.ElementaryBlocksTest.csproj
@@ -21,14 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Framework.ElementaryBlocks\iCode.Framework.ElementaryBlocks.csproj" />
-    <ProjectReference Include="..\iCode.Framework\iCode.Framework.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="iCode.Logger">
-      <HintPath>..\..\iLoggerRepository\src\iCode.Logger\bin\Release\net6.0\iCode.Logger.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\iCode.Framework.AsyncEnumerable\iCode.Framework.AsyncEnumerable.csproj" />
+    <ProjectReference Include="..\iCode.Logger\iCode.Logger.csproj" />
   </ItemGroup>
 
 </Project>
