--- a/iCode.Extensions.StreamReaderExtensions/iCode.Extentions.StreamReaderExtensions.csproj
+++ b/iCode.Extensions.StreamReaderExtensions/iCode.Extentions.StreamReaderExtensions.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Extentions.IEnumerableExtentions\iCode.Extentions.IEnumerableExtentions.csproj" />
-    <ProjectReference Include="..\iCode.Framework.AutomizedFeeding\iCode.Framework.AutomizedFeeding.csproj" />
+    <ProjectReference Include="..\iCode.Extensions.IEnumerableExtensions\iCode.Extensions.IEnumerableExtensions.csproj" />
   </ItemGroup>
 
 </Project>
