--- a/iCode.Framework/iCode.Framework.csproj
+++ b/iCode.Framework/iCode.Framework.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Extentions.IEnumerableExtentions\iCode.Extentions.IEnumerableExtentions.csproj" />
+    <ProjectReference Include="..\iCode.Extensions.IEnumerableExtensions\iCode.Extensions.IEnumerableExtensions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
