Simplify the namespace naming rules

--- a/iCode.Extensions.StringExtensions/iCode.Extentions.StringExtensions.csproj
+++ b/iCode.Extensions.StringExtensions/iCode.Extentions.StringExtensions.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\iCode.Framework.Guard\iCode.Framework.Guard.csproj" />
+  </ItemGroup>
+
 </Project>
