--- a/iCode.Extensions.FileSystemExtensions/iCode.Extensions.FileSystemExtensions.csproj
+++ b/iCode.Extensions.FileSystemExtensions/iCode.Extensions.FileSystemExtensions.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\iCode.Framework.FilePath\iCode.Framework.FilePath.csproj" />
+  </ItemGroup>
+
 </Project>
