Added iCode.Data APIs as a new  simplfied ans speciakised view of the framework / entensions

--- a/iCode.IEnumerableExtensions.UsageExamples/iCode.IEnumerableExtensions.UsageExamples.csproj
+++ b/iCode.IEnumerableExtensions.UsageExamples/iCode.IEnumerableExtensions.UsageExamples.csproj
@@ -13,11 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Extensions.FileSystemExtensions\iCode.Extensions.FileSystemExtensions.csproj" />
-    <ProjectReference Include="..\iCode.Extensions.StreamReaderExtensions\iCode.Extentions.StreamReaderExtensions.csproj" />
-    <ProjectReference Include="..\iCode.Extensions.StringExtensions\iCode.Extentions.StringExtensions.csproj" />
+    <ProjectReference Include="..\iCode.Data.Map\iCode.Data.StringEnumerablePlusRgx_Mapper.csproj" />
     <ProjectReference Include="..\iCode.Framework.Rgx\iCode.Framework.Rgx.csproj" />
     <ProjectReference Include="..\iCode.Logger\iCode.Logger.csproj" />
+    <ProjectReference Include="..\iCode.read\iCode.Data.Read.csproj" />
     <ProjectReference Include="..\iCode.Test.Tools\iCode.Test.Tools.csproj" />
   </ItemGroup>
 
