--- a/iCode.Framework.UnixStyleArgs/iCode.Framework.UnixStyleArgs.csproj
+++ b/iCode.Framework.UnixStyleArgs/iCode.Framework.UnixStyleArgs.csproj
@@ -16,8 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\iCode.Extensions.IEnumerableExtensions\iCode.Extensions.IEnumerableExtensions.csproj" />
-    <ProjectReference Include="..\iCode.Extensions.NewObjectsParsing\iCode.Extensions.NewObjectsParsing.csproj" />
-    <ProjectReference Include="..\iCode.Extensions.StringExtensions\iCode.Extentions.StringExtensions.csproj" />
+    <ProjectReference Include="..\iCode.Framework.AutomizedFeeding\iCode.Framework.AutomizedFeeding.csproj" />
   </ItemGroup>
 
 </Project>
