--- a/iCode.IEnumerableExtensions.UsageExamples/iCode.Data.UsageExamples.csproj
+++ b/iCode.IEnumerableExtensions.UsageExamples/iCode.Data.UsageExamples.csproj
@@ -13,11 +13,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Data.Map\iCode.Data.StringEnumerablePlusRgx_Mapper.csproj" />
+    <ProjectReference Include="..\iCode.Data.Write\iCode.Data.Write.csproj" />
     <ProjectReference Include="..\iCode.Framework.Rgx\iCode.Framework.Rgx.csproj" />
     <ProjectReference Include="..\iCode.Logger\iCode.Logger.csproj" />
     <ProjectReference Include="..\iCode.read\iCode.Data.Read.csproj" />
     <ProjectReference Include="..\iCode.Test.Tools\iCode.Test.Tools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="People.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
