iCode.Data regxs API still need factorisation of the Cases /SelectCase/ForEachCase functions

--- a/iCode.IEnumerableExtensions.UsageExamples/iCode.Data.UsageExamples.csproj
+++ b/iCode.IEnumerableExtensions.UsageExamples/iCode.Data.UsageExamples.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\iCode.Data.CSV_Mapper\iCode.Data.CSV_Mapper.csproj" />
+    <ProjectReference Include="..\iCode.Data.Map\iCode.Data.StringEnumerablePlusRgx_Mapper.csproj" />
     <ProjectReference Include="..\iCode.Data.Write\iCode.Data.Write.csproj" />
     <ProjectReference Include="..\iCode.Framework.Rgx\iCode.Framework.Rgx.csproj" />
     <ProjectReference Include="..\iCode.Logger\iCode.Logger.csproj" />
@@ -21,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="log.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="People.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
