Finish usage examples + add Readme

--- a/iCode.Framework.EnumerablePlus/iCode.Framework.EnumerablePlus.csproj
+++ b/iCode.Framework.EnumerablePlus/iCode.Framework.EnumerablePlus.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\iCode.Extensions.IEnumerableExtensions\iCode.Extensions.IEnumerableExtensions.csproj" />
+  </ItemGroup>
+
 </Project>
