refactor: rename EnumerablePlus to EnumerableWithNote and AsyncEnumerable to AsyncEnumerableMerger
This commit renames classes to better reflect their purpose and functionality:
- EnumerablePlus → EnumerableWithNote with corresponding method changes (Plus → WithNote)
- AsyncEnumerable → AsyncEnumerableMerger and AsyncEnumerator → AsyncEnumeratorMerger
- Enhances EnumerableWithNote with additional note-aware methods
- Updates all project references and usages accordingly

--- a/iCode.ElementaryBlocksTest/iCode.ElementaryBlocksTest.csproj
+++ b/iCode.ElementaryBlocksTest/iCode.ElementaryBlocksTest.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCode.Framework.AsyncEnumerable\iCode.Framework.AsyncEnumerable.csproj" />
+    <ProjectReference Include="..\iCode.Framework.AsyncEnumerable\iCode.Framework.AsyncEnumerableMerger.csproj" />
     <ProjectReference Include="..\iCode.Logger\iCode.Logger.csproj" />
   </ItemGroup>
 
