--- a/iCode.Data.Map/iCode.Data.StringEnumerablePlusRgx_Mapper.csproj
+++ b/iCode.Data.Map/iCode.Data.StringEnumerablePlusRgx_Mapper.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\iCode.Data.StringMapper\iCode.Data.String_Mapper.csproj" />
-    <ProjectReference Include="..\iCode.Framework.EnumerablePlus\iCode.Framework.EnumerablePlus.csproj" />
+    <ProjectReference Include="..\iCode.Framework.EnumerablePlus\iCode.Framework.EnumerableWithNote.csproj" />
     <ProjectReference Include="..\iCode.Framework.Rgx\iCode.Framework.Rgx.csproj" />
   </ItemGroup>
 
