--- a/iCode.Framework.AsyncEnumerable/iCode.Framework.AsyncEnumerableMerger.csproj
+++ b/iCode.Framework.AsyncEnumerable/iCode.Framework.AsyncEnumerableMerger.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\iCode.Framework\iCode.Framework.csproj" />
+    <ProjectReference Include="..\iCode.Logger\iCode.Logger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
