--- a/DataFlow.Extensions.IAsyncEnumerableExtensions/DataFlow.Extensions.IAsyncEnumerableExtensions.csproj
+++ b/DataFlow.Extensions.IAsyncEnumerableExtensions/DataFlow.Extensions.IAsyncEnumerableExtensions.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataFlow.Extensions.FileSystemExtensions\DataFlow.Extensions.FileSystemExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.StringExtensions\DataFlow.Extentions.StringExtensions.csproj" />
   </ItemGroup>
 
