This commit refactors the codebase to improve organization and maintainability by:
1. Fixing namespace declarations by moving them outside of class blocks
2. Adding proper project reference to DataFlow.Framework in AsyncEnumDataSource.csproj
3. Removing unused files like DataFlowDynamicBufferExpansioncs and DataPublisher.cs
4. Removing ScheduleCall.cs which appears to be deprecated
5. Adding SelectManyParallelAsyncQuery.cs to extend parallel query capabilities
6. Cleaning up namespace imports across multiple files
7. Removing the ElementaryBlocksTest project from the solution
8. Standardizing code formatting across the codebase

The changes maintain functionality while making the code more maintainable and consistent.

--- a/DataFlow.Framework.AsyncEnumDataSource/DataFlow.Framework.AsyncEnumDataSource.csproj
+++ b/DataFlow.Framework.AsyncEnumDataSource/DataFlow.Framework.AsyncEnumDataSource.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataFlow.Framework\DataFlow.Framework.csproj" />
+  </ItemGroup>
+
 </Project>
