refactor: replace Cumul with Aggregate and reorganize extension classes
The commit reorganizes extension classes by:
- Replacing custom Cumul method with standard Aggregate
- Renaming EnumerableDataSourceExtensions to EnumerableAsyncExtensions
- Moving methods to appropriate extension classes
- Splitting ParallelQueryExtensions into separate files
- Making helper methods private
- Adding SparkQuery related files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ obj/
 bin/
 .vs/
 script*/
+data/file_hashes.json
+DataFlow.Extensions.SparkQueryExtensions/DataFlow.Extensions.SparkQueryExtensions.csproj
+DataFlow.Extensions.SparkQueryExtensions/SparkQueryCasesExtensions.cs
+DataFlow.Extensions.SparkQueryExtensions/SparkQueryExtensions.cs
+DataFlow.Framework.SparkQuery/DataFlow.Framework.SparkQuery.csproj
+DataFlow.Framework.SparkQuery/SparkQuery.cs
+DataFlow.Framework.SparkQuery/WindowContext.cs
+DataFlow.Framework.SparkQuery/WindowExtensions.cs
+DataFlow.Framework.SparkQuery/WindowSpecBuilder.cs
