1. Renaming `Regxes` class to `RegexTokenizer` to better reflect its purpose 2. Moving regex functionality from `DataFlow.Framework.Rgx` to `DataFlow.Framework.RegexTokenizer` 3. Creating new extensions in `DataFlow.Extensions.RegexTokenizerExtensions` 4. Updating project references and namespaces throughout the codebase 5. Renaming `DataFlow.Data.CSV_Mapper` to `DataFlow.Data.CSV` for consistency 6. Refactoring `AsyncEnumDataSource` into a more general `DataSource` implementation 7. Replacing `Throttle()` calls with `Async()` in tests for better performance
The PR maintains backward compatibility while providing a clearer API structure. The regex tokenization functionality is now better organized and named more appropriately. All documentation has been updated to reflect these changes.

--- a/DataFlow.Extensions.RegexTokenizerExtensions/DataFlow.Extensions.RegexTokenizerExtensions.csproj
+++ b/DataFlow.Extensions.RegexTokenizerExtensions/DataFlow.Extensions.RegexTokenizerExtensions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Data.StringMapper\DataFlow.Data.String_Mapper.csproj" />
+    <ProjectReference Include="..\DataFlow.Data.StringMapper\DataFlow.Data.StringMapper.csproj" />
     <ProjectReference Include="..\DataFlow.Framework.EnumerablePlus\DataFlow.Framework.EnumerableWithNote.csproj" />
-    <ProjectReference Include="..\DataFlow.Framework.Rgx\DataFlow.Framework.Rgx.csproj" />
+    <ProjectReference Include="..\DataFlow.Framework.RegexTokenizer\DataFlow.Framework.RegexTokenizer.csproj" />
   </ItemGroup>
 
 </Project>
