--- a/DataFlow.Test.UsageExamples/DataFlow.Test.UsageExamples.csproj
+++ b/DataFlow.Test.UsageExamples/DataFlow.Test.UsageExamples.csproj
@@ -13,12 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Data.CSV_Mapper\DataFlow.Data.CSV_Mapper.csproj" />
-    <ProjectReference Include="..\DataFlow.Data.Map\DataFlow.Data.StringEnumerablePlusRgx_Mapper.csproj" />
+    <ProjectReference Include="..\DataFlow.Data.CSV_Mapper\DataFlow.Data.CSV.csproj" />
     <ProjectReference Include="..\DataFlow.Data.Read\DataFlow.Data.Read.csproj" />
     <ProjectReference Include="..\DataFlow.Data.Write\DataFlow.Data.Write.csproj" />
+    <ProjectReference Include="..\DataFlow.Extensions.RegexTokenizerExtensions\DataFlow.Extensions.RegexTokenizerExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Framework.EnumerablePlus\DataFlow.Framework.EnumerableWithNote.csproj" />
-    <ProjectReference Include="..\DataFlow.Framework.Rgx\DataFlow.Framework.Rgx.csproj" />
     <ProjectReference Include="..\DataFlow.Logger\DataFlow.Logger.csproj" />
     <ProjectReference Include="..\DataFlow.Logger\DataFlow.Logger.csproj" />
     <ProjectReference Include="..\DataFlow.Test.Tools\DataFlow.Test.Tools.csproj" />
