1. Added detailed XML documentation to ParallelQueryExtensions with parameter descriptions, exception details, and usage notes 2. Enhanced StringExtensions with proper documentation and improved parameter validation 3. Standardized method naming across the codebase:    - Renamed methods with proper casing (e.g., `isWatched` → `IsWatched`)    - Renamed data reading methods for consistency (e.g., `csv` → `Csv`)    - Standardized Feeder methods (`Feed_InternalOrder` → `FeedUsingInternalOrder`) 4. Added a detailed documentation file for the Data Reading infrastructure 5. Updated README examples to use the new method names

--- a/DataFlow.Test.DataFlowTest/DataFlow.Test.DataFlowTest.csproj
+++ b/DataFlow.Test.DataFlowTest/DataFlow.Test.DataFlowTest.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataFlow.Data.Write\DataFlow.Data.Write.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.AsyncEnumerableExtensions\DataFlow.Extensions.AsyncEnumerableExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.EnumerableExtensions\DataFlow.Extensions.EnumerableExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.ParallelAsyncQueryExtensions\DataFlow.Extensions.ParallelAsyncQueryExtensions.csproj" />
