The main changes include:
1. Updates to `DataFlow-Data-Reading-Infrastructure.md`:
   - Clarified CSV raw record handling: removed `CaptureRawRecord` in favor of always using `RawRecordObserver`
   - Renamed `HandleSingleRootFullFile` to `ProcessSingleRootValidationFromStream` for clarity
   - Fixed typo in "HandleError Workflow" section header
   - Removed references to the planned but not implemented `CsvSchemaInferenceWarning`
   - Updated error excerpt handling details

2. Added new documentation files:
   - `LINQ-to-Spark.md`: Details a C# LINQ-to-Spark translator that enables writing idiomatic C# code that executes on Apache Spark clusters
   - `ObjectMaterializer.md`: Documents a lightweight library for materializing objects from structured data

3. Major updates to `README.md`:
   - Refreshed the framework overview with clearer explanations
   - Updated architecture descriptions to focus on AsyncEnumerable instead of DataFlow/DataPublisher
   - Modernized code examples to reflect current API patterns
   - Improved formatting and readability throughout
   - Added more detailed explanations of the Cases/SelectCase/ForEachCase pattern
   - Updated performance guidance

--- a/DataFlow.Data.Read/DataFlow.Data.Read.csproj
+++ b/DataFlow.Data.Read/DataFlow.Data.Read.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Data.StringMapper\DataFlow.Data.StringMapper.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.AsyncEnumerableExtensions\DataFlow.Extensions.AsyncEnumerableExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.EnumerableExtensions\DataFlow.Extensions.EnumerableExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.StringExtensions\DataFlow.Extentions.StringExtensions.csproj" />
+    <ProjectReference Include="..\DataFlow.Framework.AutomizedFeeding\DataFlow.Framework.ObjectMaterialization.csproj" />
   </ItemGroup>
 
   <ItemGroup>
