--- a/DataFlow.Framework.UnixStyleArgs/DataFlow.Framework.UnixStyleArgs.csproj
+++ b/DataFlow.Framework.UnixStyleArgs/DataFlow.Framework.UnixStyleArgs.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataFlow.Extensions.EnumerableExtensions\DataFlow.Extensions.EnumerableExtensions.csproj" />
-    <ProjectReference Include="..\DataFlow.Framework.AutomizedFeeding\DataFlow.Framework.AutomizedFeeding.csproj" />
+    <ProjectReference Include="..\DataFlow.Framework.AutomizedFeeding\DataFlow.Framework.ObjectMaterialization.csproj" />
   </ItemGroup>
 
 </Project>
