--- a/DataFlow.Test.EnumerableExtensionsTest/DataFlow.App.EnumerableExtentionsTest.csproj
+++ b/DataFlow.Test.EnumerableExtensionsTest/DataFlow.App.EnumerableExtentionsTest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Logger\DataFlow.Logger.csproj" />
+    <ProjectReference Include="..\DataFlow.Extensions.EnumerableExtensions\DataFlow.Extensions.EnumerableExtensions.csproj" />
+    <ProjectReference Include="..\DataFlow.Framework.AutomizedFeeding\DataFlow.Framework.ObjectMaterialization.csproj" />
   </ItemGroup>
 
 </Project>
