--- a/DataFlow.Test.NewObjectsParsingTest/DataFlow.App.NewObjectsParsingTest.csproj
+++ b/DataFlow.Test.NewObjectsParsingTest/DataFlow.App.NewObjectsParsingTest.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CompareNETObjects" Version="4.74.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xUnit.Asserts.Compare" Version="1.0.0.5" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -21,8 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Extensions.EnumerableExtensions\DataFlow.Extensions.EnumerableExtensions.csproj" />
-    <ProjectReference Include="..\DataFlow.Framework.AutomizedFeeding\DataFlow.Framework.AutomizedFeeding.csproj" />
+    <ProjectReference Include="..\DataFlow.Framework.AutomizedFeeding\DataFlow.Framework.ObjectMaterialization.csproj" />
   </ItemGroup>
 
 </Project>
