--- a/DataFlow.Test.UsageExamples/DataFlow.App.UsageExamples.csproj
+++ b/DataFlow.Test.UsageExamples/DataFlow.App.UsageExamples.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,14 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Data.CSV_Mapper\DataFlow.Data.CSV.csproj" />
     <ProjectReference Include="..\DataFlow.Data.Read\DataFlow.Data.Read.csproj" />
     <ProjectReference Include="..\DataFlow.Data.Write\DataFlow.Data.Write.csproj" />
     <ProjectReference Include="..\DataFlow.Extensions.RegexTokenizerExtensions\DataFlow.Extensions.RegexTokenizerExtensions.csproj" />
     <ProjectReference Include="..\DataFlow.Framework.EnumerablePlus\DataFlow.Framework.EnumerableWithNote.csproj" />
     <ProjectReference Include="..\DataFlow.Logger\DataFlow.Logger.csproj" />
     <ProjectReference Include="..\DataFlow.Logger\DataFlow.Logger.csproj" />
-    <ProjectReference Include="..\DataFlow.Test.Tools\DataFlow.Test.Tools.csproj" />
+    <ProjectReference Include="..\DataFlow.Test.Tools\DataFlow.App.Tools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
