--- a/DataFlow.Data.Read/DataFlow.Data.Read.csproj
+++ b/DataFlow.Data.Read/DataFlow.Data.Read.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <!-- PackageId for NuGet -->
+    <PackageId>DataFlow.Data</PackageId>
+    <Description>High-performance data readers and writers for CSV, JSON, YAML, and Text files. Supports both sync (IEnumerable) and async (IAsyncEnumerable) streaming.</Description>
+    
+    <!-- Override LangVersion if needed -->
     <LangVersion>13</LangVersion>
   </PropertyGroup>
 
@@ -16,7 +18,6 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
-    <PackageReference Include="Snowflake.Data" Version="5.2.1" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
