--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,12 @@ bin/
 .vs/
 script*/
 data/file_hashes.json
-DataFlow.Extensions.SparkQueryExtensions/DataFlow.Extensions.SparkQueryExtensions.csproj
-DataFlow.Extensions.SparkQueryExtensions/SparkQueryCasesExtensions.cs
-DataFlow.Extensions.SparkQueryExtensions/SparkQueryExtensions.cs
-DataFlow.Framework.SparkQuery/DataFlow.Framework.SparkQuery.csproj
-DataFlow.Framework.SparkQuery/SparkQuery.cs
-DataFlow.Framework.SparkQuery/WindowContext.cs
-DataFlow.Framework.SparkQuery/WindowExtensions.cs
-DataFlow.Framework.SparkQuery/WindowSpecBuilder.cs
-DataFlow.Framework.SnowflakeQuery/DataFlow.Framework.SnowflakeQuery.csproj
-DataFlow.Framework.SnowflakeQuery/SnowflakeQuery.cs
-DataFlow.Framework.SnowflakeQuery/Read.Snowflake.cs
-UnitTests/DataFlow.SnowflakeQuery.Tests/
+DataFlow.Extensions.SparkQueryExtensions/
+DataFlow.Framework.SparkQuery/
 UnitTests/DataFlow.SparkQuery.Tests/
+DataFlow.Framework.SnowflakeQuery/
+UnitTests/DataFlow.SnowflakeQuery.Tests/
+archive/
+coverage/
+kh/
+UnitTests/TestResults/
