--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,7 +7,7 @@
     <LangVersion>12.0</LangVersion>
     
     <!-- Package Metadata -->
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Bilel Msekni</Authors>
     <Company>improveTheWorld</Company>
     <Copyright>© 2026 improveTheWorld. All rights reserved.</Copyright>
@@ -18,6 +18,7 @@
     <PackageTags>dataflow;streaming;linq;async;csv;json;yaml;data-processing</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageReleaseNotes>v1.1.0: Critical fix for YAML MaxNodeScalarLength infinite loop (BUG-007), YamlDotNet bundled in package. Full notes: https://github.com/improveTheWorld/DataFlow.NET/blob/main/src/docs/RELEASE-NOTES-v1.1.0.md</PackageReleaseNotes>
     
     <!-- Symbols & Source Link -->
     <IncludeSymbols>true</IncludeSymbols>
