--- a/IntegrationTests/DataFlow.Logger.UsageExamples/DataFlow.Logger.Test.UsageExamples.csproj
+++ b/IntegrationTests/DataFlow.Logger.UsageExamples/DataFlow.Logger.Test.UsageExamples.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Logger\DataFlow.Logger.csproj" />
+    <ProjectReference Include="..\..\DataFlow.Logger\DataFlow.Logger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
