--- a/UnitTests/DataFlow.Logger.Tests/DataFlow.Logger.Tests.csproj
+++ b/UnitTests/DataFlow.Logger.Tests/DataFlow.Logger.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataFlow.Logger.csproj" />
+    <ProjectReference Include="..\..\DataFlow.Logger\DataFlow.Logger.csproj" />
   </ItemGroup>
 
 </Project>
