--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,7 +7,7 @@
     <LangVersion>12.0</LangVersion>
     
     <!-- Package Metadata -->
-    <Version>1.2.0</Version>
+    <Version>1.2.1</Version>
     <Authors>Bilel Msekni</Authors>
     <Company>improveTheWorld</Company>
     <Copyright>© 2026 improveTheWorld. All rights reserved.</Copyright>
@@ -18,7 +18,7 @@
     <PackageTags>dataflow;streaming;linq;async;csv;json;yaml;data-processing</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageReleaseNotes>v1.2.0: ObjectMaterializer fixes, API harmonization, test reorganization. Full notes: https://github.com/improveTheWorld/DataFlow.NET/blob/main/docs/changelog/DataFlow.Net_1.2.0.md</PackageReleaseNotes>
+    <PackageReleaseNotes>v1.2.1: Smart Decimal Auto-Detection, Write API Harmonization, ReadOptions.OnError property, YAML record support, 5 GitHub issues closed. Full notes: https://github.com/improveTheWorld/DataFlow.NET/blob/main/docs/changelog/DataFlow.Net_1.2.1.md</PackageReleaseNotes>
     
     <!-- Symbols & Source Link -->
     <IncludeSymbols>true</IncludeSymbols>
